<resources>
    <string name="app_name">Pomy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Pomy</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_list">Task List</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next_cicle">Next cicle</string>
    <string name="task">Task</string>
    <string name="Hist">Historical</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_next">Next</string>
    <string name="button_hist">Historic</string>
    <string name="lab_star">Start</string>
    <string name="lab_end">End</string>
    <string name="lab_task">Task</string>
    <string name="lab_total">Total Time</string>
    <!-- Strings used for notification -->
    <string name="pomodoro_expired">Pomodoro Expired!</string>
    <string name="start_again">Start again?</string>
    <string name="pomodoro_running_task">Pomy is Running Task</string>
    <string name="pomodoro_running_pause">Pomy is Running Break</string>
    <string name="pomodoro_paused">Pomy is Paused</string>
    <string name="resume">Resume?</string>
    <string name="end">End: </string>
    <string name="pomodoro_next">Next Pomodoro</string>
    <string name="dialog_message_pause">Take a kit-kat</string>
    <string name="dialog_message_work">Let´s start typing</string>
    <!-- Strings used for menus -->
    <string name="pause_short">15 minutes</string>
    <string name="pause_long">30 minutes</string>
    <!-- Strings used for Alarma -->
    <string name="new_notification">New Notification</string>
</resources>